# Doggybot-Project

./: LICENSE  README.md
doggybot_controller/: CMakeLists.txt  package.xml
doggybot_controller/include/doggybot_controller/: MPC.hpp  PID.hpp  PP.hpp  controller.hpp  controller_node.hpp
doggybot_controller/src/: MPC.cpp  PID.cpp  PP.cpp  controller.cpp  controller_node.cpp
doggybot_description/: CMakeLists.txt  package.xml
doggybot_description/launch/: doggy_description.launch.py
doggybot_description/urdf/: body.xacro  controller.xacro  doggybot.urdf.xacro  leg_wheel.xacro  sensors.xacro
doggybot_gazebo/: CMakeLists.txt  package.xml
doggybot_gazebo/config/: controller.yaml
doggybot_gazebo/include/doggybot_gazebo/: tf_broadcast.hpp
doggybot_gazebo/launch/: doggy_gazebo.launch.py
doggybot_gazebo/rviz/: doggy.rviz
doggybot_gazebo/src/: tf_broadcast.cpp
doggybot_gazebo/worlds/: world.sdf
doggybot_planner/: CMakeLists.txt  package.xml
doggybot_planner/include/doggybot_planner/: RRT.hpp
